// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App It is a corrrect snapshot 1`] = `
<div
  className="page"
>
  <div
    className="interactions"
  >
    <form
      onSubmit={[Function]}
    >
      <input
        onChange={[Function]}
        type="text"
        value="redux"
      />
      <button
        type="submit"
      >
        Поиск
      </button>
    </form>
  </div>
  <div
    className="table"
  >
    <div
      className="table-header"
    >
      <span
        style={
          Object {
            "width": "40%",
          }
        }
      >
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        />
        Заголовок
      </span>
      <span
        style={
          Object {
            "width": "30%",
          }
        }
      >
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        />
        Автор
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }
      >
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        />
        Комментарии
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }
      >
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        />
        Очки
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }
      >
        Архив
      </span>
    </div>
  </div>
  <div
    className="interactions"
  >
    <div>
      Загрузка ...
    </div>
  </div>
</div>
`;

exports[`Button It is a corrrect snapshot 1`] = `
<button
  className=""
  type="button"
>
  Больше историй
</button>
`;

exports[`Search It is a corrrect snapshot 1`] = `
<form>
  <input
    type="text"
  />
  <button
    type="submit"
  >
    Поиск
  </button>
</form>
`;

exports[`Table It is a corrrect snapshot 1`] = `
<div
  className="table"
>
  <div
    className="table-header"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <button
        className="button-inline button-active"
        onClick={[Function]}
        type="button"
      />
      Заголовок
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      />
      Автор
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      />
      Комментарии
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      />
      Очки
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      Архив
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      className="largeColumn"
    >
      <a>
        1
      </a>
    </span>
    <span
      className="midColumn"
    >
      1
    </span>
    <span
      className="smallColumn"
    >
      1
    </span>
    <span
      className="smallColumn"
    >
      2
    </span>
    <button
      className="button-inline smallColumn"
      onClick={[Function]}
      type="button"
    >
      Отбросить
    </button>
  </div>
  <div
    className="table-row"
  >
    <span
      className="largeColumn"
    >
      <a>
        2
      </a>
    </span>
    <span
      className="midColumn"
    >
      2
    </span>
    <span
      className="smallColumn"
    >
      1
    </span>
    <span
      className="smallColumn"
    >
      2
    </span>
    <button
      className="button-inline smallColumn"
      onClick={[Function]}
      type="button"
    >
      Отбросить
    </button>
  </div>
</div>
`;
